--- a/content/fish.org
+++ b/content/fish.org
@@ -1,7 +1,9 @@
 * The Sea
 
+#+begin_verse
 Strange what sort of fish are we?
 Stood and stolen by unfolded light.
 Played by the even sun, so seen
 And felt as sand shifting in the ground,
 Flowing west to Avalon.
+#+end_verse
