--- a/content/index.org
+++ b/content/index.org
@@ -6,6 +6,7 @@ hi im luke this is my blog and stuff i made
 #+ATTR_HTML: :align center :id index-table
 | post                                   | tags                                            | date         |
 |----------------------------------------+-------------------------------------------------+--------------|
+| [[https://www.lzeitlin.xyz/astrosystem/][astrosystem]]                            | music, tools                                    | [2025-06-11] |
 | [[https://www.lzeitlin.xyz/awbit/][awbit gallary]]                          | concept, web design                             | [2025-06-08] |
 | [[file:fish.org][the sea]]                                | writing, poetry                                 | [2025-01-17] |
 | [[file:dwarves.org][the ultimate charm]]                     | writing, fiction                                | [2024-12-30] |
