correction to milkweed article

--- a/content/milkweed.org
+++ b/content/milkweed.org
@@ -23,7 +23,7 @@ Preexisting steroid synthesis pathways that serve other functions like hormone p
 
 Not all animals are deterred from eating milkweed. The caterpillar of the milkweed butterfly, more commonly known as the monarch butterfly, has evolved specific amino acid substitutions on their cells' sodium-potassium pumps, reducing the effectiveness of inhibition by cardiac glycosides. They are not just able to ingest it, they selectively absorb the poison into their hemolymph (insect blood) and concentrate it in various tissues. This persists through metamorphosis into the adult stage, making the butterfly unappetising to its would-be predators.
 
-The distinctively coloured monarch butterfly, named after King William III aka William of Orange, migrates great distances across North and Central America for good food and weather conditions. As a result, it is exposed to many ecosystems with distinctive predators. This exposure to diverse environments and predators may explain why monarch butterflies were particularly well-suited to develop distinctive colouration and a poisonous, bad tasting poison. The identifiable colours are a form of /aposematism/ - signalling of danger to predators.
+The distinctively coloured monarch butterfly, named after King William III aka William of Orange, migrates great distances across North and Central America for good food and weather conditions. As a result, it is exposed to many ecosystems with distinctive predators. This exposure to diverse environments and predators may explain why monarch butterflies were particularly well-suited to develop distinctive colouration and bad tasting poison. The identifiable colours are a form of /aposematism/ - signalling of danger to predators.
 
 * The Viceroy Butterfly
 
