more milkweed corrections

--- a/content/milkweed.org
+++ b/content/milkweed.org
@@ -41,7 +41,7 @@ In 1848 two English amateur entomologists, Henry Walter Bates and Alfred Russel 
 
 [[file:images/Franzmuller.jpg]]
 
-As mentioned above, the viceroy butterfly cannot eat milkweed. However it does eat willow and other plants that contain salicylic acid and other bitter, bad tasting compounds. While not as toxic, this is also a deterrent to herbivores. Since it has its own deterrent, the viceroy is not a strict example of Batesian mimic.
+As mentioned above, the viceroy butterfly cannot eat milkweed. However it does eat willow and other plants that contain salicylic acid and other bitter, bad tasting compounds. While not as toxic, this is also a deterrent to predators. Since it has its own deterrent, the viceroy is not a strict example of Batesian mimic.
 
 Fritz Müller, a German biologist, studied butterflies in South America in the 1850s and also noticed the superficial similarity of not-so-closely related butterflies. As an early proponent of Darwin's theory, Müller suggested an evolutionary reason for this whereby different species that were somehow protected against predators might evolve a similar appearance so as to share the costs of predator education.
 
